--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -32,13 +32,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
       - run: |
-          go build -o ptah-agent-linux-x86_64-${{ needs.release-please.outputs.tag_name }}-bin \
+          go build -o ptah-agent-linux-x86_64 \
             -ldflags "-X main.version=${{ needs.release-please.outputs.tag_name }}" \
             cmd/ptah-agent/ptah-agent.go
-      - uses: actions/upload-artifact@v4
-        with:
-          name: ptah-agent-linux-x86_64
-          path: ptah-agent-linux-x86_64
-      - run: gh release upload "${{ needs.release-please.outputs.tag_name }}" ptah-agent-linux-x86_64-${{ needs.release-please.outputs.tag_name }}-bin
+      - run: gh release upload "${{ needs.release-please.outputs.tag_name }}" ptah-agent-linux-x86_64
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
