--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -32,9 +32,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
       - run: |
-          go build -o ptah-agent-linux-x86_64 \
+          go build -o ptah-agent-linux-x86_64.bin \
             -ldflags "-X main.version=${{ needs.release-please.outputs.tag_name }}" \
             cmd/ptah-agent/ptah-agent.go
-      - run: gh release upload "${{ needs.release-please.outputs.tag_name }}" ptah-agent-linux-x86_64
+      - run: gh release upload "${{ needs.release-please.outputs.tag_name }}" ptah-agent-linux-x86_64.bin
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
